[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/InteractableArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/printer.png" type="Texture" id=2]
[ext_resource path="res://scripts/printer/printer_interactable_area.gd" type="Script" id=3]
[ext_resource path="res://sprites/check_pixel.png" type="Texture" id=4]
[ext_resource path="res://scripts/printer/printer_check_mark.gd" type="Script" id=5]
[ext_resource path="res://sounds/printer.mp3" type="AudioStream" id=6]
[ext_resource path="res://scenes/ProgressBar.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.25, 23.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.5, 13.5 )

[node name="PrinterInteractableArea" instance=ExtResource( 1 )]
script = ExtResource( 3 )
max_paper = 10
current_paper = -1
time_per_paper = 1.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]
position = Vector2( 0.75, 0 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
shape = SubResource( 2 )

[node name="ReadyCheckmark" type="Sprite" parent="." index="3"]
visible = false
position = Vector2( 12, -18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Inventory" type="Node2D" parent="." index="4"]
visible = false

[node name="Progress" parent="." index="5" instance=ExtResource( 7 )]
margin_left = -19.0
margin_top = -22.0
margin_right = -7.0
margin_bottom = -10.0
rect_scale = Vector2( 0.998543, 0.994622 )
tint_progress = Color( 0.196078, 0.580392, 0.262745, 1 )
tint_from = Color( 0.941176, 0.219608, 0.219608, 1 )
tint_to = Color( 0.196078, 0.580392, 0.262745, 1 )

[node name="SymbolUI" type="TextureRect" parent="." index="6"]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="PrinterWorkingAudioPlayer" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource( 6 )
volume_db = 5.0

[connection signal="pile_added" from="." to="Progress" method="start_progress"]
[connection signal="pile_completed" from="." to="." method="_on_PrinterInteractableArea_pile_completed"]
[connection signal="pile_completed" from="." to="ReadyCheckmark" method="_on_pile_completed"]
[connection signal="pile_taken" from="." to="ReadyCheckmark" method="_on_pile_taken"]
